--- a/gb/17/4/17/n9048019.md
+++ b/gb/17/4/17/n9048019.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/twauiy338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twauiy338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>谢天奇：川普放硬话势在必得 金正恩岌岌可危</h2>
-<a href="https://git.io/JL7A3"><img width="600" src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2iiqnrx4rrboe.cloudfront.net/G1fNFbCxw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>金正恩自身面临美国川普政府的强势震慑；其背后主子、中共江泽民集团包括江泽民、曾庆红在内，面临习阵营的最后清算。双重围剿之下，金正恩政权岌岌可危；金正恩终将陪葬江泽民的命运料不可避免。（ED JONES/AFP/Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2017年04月18日讯】4月15日是朝鲜的“太阳节”，也是朝鲜前领导人金日成的诞辰日，朝鲜举行了大型阅兵式。不过，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>未在4月15日进行核试验，外界预期落空，但在第二天试射飞弹，却以失败告终。朝鲜不顾警告及制裁，再度试射导弹后，美、中、韩、日等各国的反应，以及<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B.md#1">朝鲜半岛</a>局势发展，成外界关注焦点。</p>
-<h2>美方强硬表态 <ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>势在必得</h2>
-<p>4月17日上午，美国总统<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在白宫复活节庆祝活动滚彩蛋时，记者问及朝鲜又射导弹，川普仅简单地回答二个字：“乖点”（Gotta behave）。</p>
-<p>美国副总统彭斯（Mike Pence）17日在韩国和朝鲜的非军事区（Demilitarized Zone）发表和川普语调类似的声明，告诫<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>：“美国对朝鲜的战略容忍时代已经结束。”稍晚，彭斯再次强调：“应对平壤核威胁的所有选项都在研议中”，“（朝鲜如果）使用核武将得到全面且有效地反击”。</p>
+	<p>【大纪元2017年04月18日讯】4月15日是朝鲜的“太阳节”，也是朝鲜前领导人金日成的诞辰日，朝鲜举行了大型阅兵式。不过，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>未在4月15日进行核试验，外界预期落空，但在第二天试射飞弹，却以失败告终。朝鲜不顾警告及制裁，再度试射导弹后，美、中、韩、日等各国的反应，以及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B.md#1">朝鲜半岛</a>局势发展，成外界关注焦点。</p>
+<h2>美方强硬表态 <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>势在必得</h2>
+<p>4月17日上午，美国总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在白宫复活节庆祝活动滚彩蛋时，记者问及朝鲜又射导弹，川普仅简单地回答二个字：“乖点”（Gotta behave）。</p>
+<p>美国副总统彭斯（Mike Pence）17日在韩国和朝鲜的非军事区（Demilitarized Zone）发表和川普语调类似的声明，告诫<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E6%AD%A3%E6%81%A9.md#1">金正恩</a>：“美国对朝鲜的战略容忍时代已经结束。”稍晚，彭斯再次强调：“应对平壤核威胁的所有选项都在研议中”，“（朝鲜如果）使用核武将得到全面且有效地反击”。</p>
 <p>就在朝鲜发射导弹失败几个小时后，美国国家安全顾问麦克马斯特（H.R. McMaster）4月16日向美国媒体表示，川普总统将不会允许金正恩政权拥有威胁美国的能力，“我们的总统将采取最符合美国人民利益的行动”。</p>
 <p>麦克马斯特还向英国官员表示，美国的武力足以摧毁朝鲜的核武器，且不排除实施先发制人的打击。</p>
 <p>白宫国家安全副顾问麦克法兰（KT McFarland）4月16日告诉福克斯新闻，朝鲜是该地区所有国家的问题，包括它的最大盟友北京。“朝鲜不仅对美国构成威胁，也威胁韩国、日本、俄罗斯，以及中国。”</p>
 <h2>美国大军压境 先行练兵</h2>
-<p>与美国高官强硬表态相呼应，美国军事力量正在<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B.md#1">朝鲜半岛</a>集结。</p>
+<p>与美国高官强硬表态相呼应，美国军事力量正在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B.md#1">朝鲜半岛</a>集结。</p>
 <p>韩国政府4月17日透露，美国“卡尔文森号”（CVN-70）航空母舰战斗群将于25日驶入朝鲜半岛东部海域，另外两艘核动力航母“里根号”和“尼米兹号”也将于下周抵达朝鲜半岛战区。</p>
 <p>另外，4月11日，川普在接受福克斯采访时表示：“我们正派出一支无敌舰队。非常强大。”“我们有潜艇，非常强大，比航母强大得多。”</p>
 <p>川习会前，川普于4月2日接受英国《金融时报》专访时说，在川习会上肯定会谈朝鲜问题。他认为，中方对朝鲜有很大影响力，中方可以决定在朝鲜问题上是否帮忙 ，“中国如果决定出手协助，对中国也是好事；反之，中国若不帮忙，对谁都不利”。川普还说，但若中方在北韩问题上不帮忙，美国完全可以自己处理。</p>
@@ -34,14 +34,14 @@
 <p>金正恩当局邀请外国记者，无法不让外界怀疑，其意在绑架人质，企图防范美国的军事打击与“斩首”行动。</p>
 <p>在美国大军压境以及川普等美国高层放话强势震慑之下，朝鲜金正恩政权近期的表现已凸显其色厉内荏、惶惶不可终日的末日垂死心态。</p>
 <h2>金正恩骑虎难下 “横竖都是死”</h2>
-<p><ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E6%A0%B8%E6%AD%A6.md#1">朝鲜核武</a>问题是金正恩独裁政权的一个死结。在目前的态势下，一旦金正恩政权敢于进行核试验与发射导弹，随时可能遭到美国强大军事力量的拦截与打架。战争危机一触即发，金正恩政权必将在最短时间内遭受最致命的打击，该政权很可能面临即刻瓦解。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E6%A0%B8%E6%AD%A6.md#1">朝鲜核武</a>问题是金正恩独裁政权的一个死结。在目前的态势下，一旦金正恩政权敢于进行核试验与发射导弹，随时可能遭到美国强大军事力量的拦截与打架。战争危机一触即发，金正恩政权必将在最短时间内遭受最致命的打击，该政权很可能面临即刻瓦解。</p>
 <p>另一方面，金正恩依赖于展示军事力量及反美姿态以维系其对朝鲜国民的洗脑与独裁统治。如果金正恩按照美国川普政府的要求放弃发展核武与导弹，无异于自废武功；不仅散失同美国等国际社会对抗、讨价还价的筹码，面临国际正义力量的清算，在国内也无法再维系对国民的洗脑教育以及对党政军高层的高压恐怖统治，随时可能被推翻。</p>
-<p>更深层的原因还有，朝鲜金氏政权一直受中共<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团操控、豢养；在习江斗的敏感节点，频频听从江派进行核恐吓等反扑、搅局行动。江派大员周永康、曾庆红、张德江、刘云山、张高丽等人与朝鲜金家均有密切联系；<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E6%A0%B8%E6%AD%A6.md#1">朝鲜核武</a>发展所需要的技术与材料，均已被披露与<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团操控的政商圈势力的支持有关。</p>
+<p>更深层的原因还有，朝鲜金氏政权一直受中共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团操控、豢养；在习江斗的敏感节点，频频听从江派进行核恐吓等反扑、搅局行动。江派大员周永康、曾庆红、张德江、刘云山、张高丽等人与朝鲜金家均有密切联系；<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E9%B2%9C%E6%A0%B8%E6%AD%A6.md#1">朝鲜核武</a>发展所需要的技术与材料，均已被披露与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团操控的政商圈势力的支持有关。</p>
 <p>目前，在习江斗中，习阵营已取得压倒性态势，清洗行动已指向终极“大老虎”江泽民、曾庆红及其家族。跟朝鲜核武有关的江泽民集团政商利益圈也正被深度清洗。江泽民集团支撑朝鲜核武的途径一旦被习阵营切断，金正恩政权的核恐吓将失效，这也将是其覆灭的前兆。</p>
 <p>金正恩自身面临美国川普政府的强势震慑，其背后主子、中共江泽民集团包括江泽民、曾庆红在内，面临习阵营的最后清算。在双重围剿之下，金正恩政权岌岌可危，金正恩终将陪葬江泽民的命运料不可避免。#</p>
 <p><strong>视频：【朝核危机内幕】金正恩“横竖都是死”</strong><br />
-<a src=""></a><a href="https://git.io/JL7A3"><img width="600" src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/R4wlty6JXHM" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<p>（未完待续；下接：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/18/n9051459.md#1">谢天奇：北京外交军事异动 川习通话藏玄机？</a>）</p>
+<a src=""></a><a href="https://d2iiqnrx4rrboe.cloudfront.net/G1fNFbCxw"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/R4wlty6JXHM" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>（未完待续；下接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/18/n9051459.md#1">谢天奇：北京外交军事异动 川习通话藏玄机？</a>）</p>
 <p>（大纪元2017年4月17日首发，转载请注明出处。）</p>
 <p>责任编辑：李昊</p>
 	
@@ -49,42 +49,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/2/14/n8811275.md#1">谢天奇：金正男遭暗杀背后 金正恩面临死劫</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/3/n8997986.md#1">谢天奇：习设立雄安新区 释放对决江曾信号</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/4/n9001411.md#1">谢天奇：川习仓促会晤 五大议题背后的秘密</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/5/n9004950.md#1">谢天奇：习4次访美后都有大动作 这次将如何?</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/14/n8811275.md#1">谢天奇：金正男遭暗杀背后 金正恩面临死劫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/3/n8997986.md#1">谢天奇：习设立雄安新区 释放对决江曾信号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/4/n9001411.md#1">谢天奇：川习仓促会晤 五大议题背后的秘密</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/5/n9004950.md#1">谢天奇：习4次访美后都有大动作 这次将如何?</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/twauiy338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/21/n12634571.md#1">《诸世纪》预言共产恶魔的产生与覆灭</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657792.md#1">【罗厨寻味】毛豆南瓜羹</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659878.md#1">【财商天下】2021趋吉避凶 解析财富与平安</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657349.md#1">【微视频】2020中国脱口秀火爆 有一类不敢说</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653452.md#1">【秦鹏直播】川普迎来两个喜讯</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654915.md#1">【新闻大家谈】默克尔抢跑 拜登第一枪卡壳</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655497.md#1">六票胜出 佩洛西同意爱州共和党众议员暂入席</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655381.md#1">郑欣宜体重破90公斤 继承肥姐遗产进入倒计时</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12658383.md#1">2020年香港演艺圈 十位资深艺人离世</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653155.md#1">明星健康码照外泄 李冰冰等千人个资仅卖1元</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657949.md#1">周迅宣布离婚后首露面 状态坦然巧笑嫣然</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655856.md#1">冯小刚降低身段拍网剧 上部电影票房惨淡</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653802.md#1">2020年地球自转速度异常快 一天时间变短</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653574.md#1">按掌心1穴位保养心脏 不让心肌梗塞上身</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654160.md#1">木星土星相合 澳男拍到国际太空站从中穿越</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653476.md#1">为了保护孩子 澳洲男子被巨大袋鼠击倒在地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/17/n9048019.htm">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/17/n9048019.htm">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/twauiy338/djy/blob/master/gb/17/4/17/n9048019.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/4/17/n9048019.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
